# rust-lcm-codec

./: Cargo.toml  LICENSE  README.md
rust-lcm-codec/: Cargo.toml  README.md
rust-lcm-codec/src/: error.rs  lib.rs
rust-lcm-codec/tests/: by_hand.rs  nested.rs  nested_list.rs  primitives.rs  single_dimension_list.rs  sliceable_list.rs
rust-lcm-codec/tests/schemas/: nested.lcm  single_dimension_list.lcm  sliceable_list.lcm
rust-lcm-codegen/: Cargo.toml  README.md
rust-lcm-codegen/src/: fingerprint.rs  lib.rs  parser.rs
test/schemas/: camera_image.clm  constants.lcm  primitives.lcm  temperature.lcm
tests/: nested.rs  nested_list.rs  primitives.rs  sliceable_list.rs
tests/schemas/: nested_list.lcm  point2d_list.lcm  single_dimension_list.lcm
